# sangria_impl

./: .gitignore  Cargo.toml  TODO.md
.github/workflow/: rust.yml
.github/workflows/: rust.yml
jellyfish/plonk/benches/: bench.rs
jellyfish/plonk/examples/: proof_of_exp.rs
jellyfish/plonk/src/: lib.rs  testing_apis.rs
jellyfish/plonk/src/circuit/: transcript.rs
jellyfish/plonk/src/circuit/plonk_verifier/: gadgets.rs  mod.rs  poly.rs
jellyfish/plonk/src/proof_system/: batch_arg.rs  mod.rs  prover.rs  snark.rs  structs.rs  verifier.rs
jellyfish/plonk/src/transcript/: mod.rs  rescue.rs  solidity.rs  standard.rs
jellyfish/primitives/: Cargo.toml
jellyfish/primitives/benches/: pcs.rs
jellyfish/primitives/src/: lib.rs  scalars_n_bases.rs
jellyfish/primitives/src/pasta/: mod.rs
jellyfish/primitives/src/pcs/: errors.rs  mod.rs  prelude.rs  structs.rs
jellyfish/primitives/src/pcs/multilinear_kzg/: mod.rs  srs.rs
jellyfish/primitives/src/pcs/univariate_ipa/: mod.rs
jellyfish/primitives/src/pcs/univariate_kzg/: mod.rs  srs.rs
jellyfish/primitives/src/rescue/: sponge.rs
jellyfish/relation/src/: lib.rs
jellyfish/relation/src/gadgets/: cmp.rs
jellyfish/relation/src/gadgets/ecc/: glv.rs
src/: errors.rs  folding_scheme.rs  ivc.rs  lib.rs  relaxed_plonk.rs  sangria.rs
src/vector_commitment/: mod.rs
src/vector_commitment/pedersen/: mod.rs
