[package]
name = "sangria_impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-crypto-primitives = "0.3.0"
ark-ff = "0.3.0"
ark-sponge = "0.3.0"
ark-serialize = "0.3.0"
ark-std = "0.3.0"
thiserror = "1.0.38"
